--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "bcrypt": "^5.0.1",
         "cookie-parser": "^1.4.6",
+        "cookie-session": "^2.0.0",
         "cors": "^2.8.5",
         "dotenv": "^16.0.1",
         "express": "^4.18.1",
@@ -20,6 +21,9 @@
         "morgan": "^1.10.0",
         "multer": "^1.4.5-lts.1",
         "nodemon": "^2.0.16",
+        "passport": "^0.6.0",
+        "passport-google-oauth20": "^2.0.0",
+        "stripe": "^9.11.0",
         "uuid": "^8.3.2"
     }
 }
